tests/paczka1/fuzzy1/69707380.err
Error in line 7: AOr8ORlSmo S153 73,9
Error in line 13: S852 S627 19,5
Error in line 16: S852 S153 41,9
Error in line 20: ZEZxQ S852 55,1
Error in line 29: ZEZxQ S153 23,4
Error in line 37: abs S153 88,8
